# deep_rabbit_hole

./: .env  .gitignore  AGENTS.md  CLAUDE.md  README.md  game_recording.yaml  model.pth  ruff.toml  run_queue.sh  test.txt.20260306_115905.bak
.github/prompts/: selfplay_rust_python_debugging.md
.github/workflows/: python-app.yml  rust-ci.yml
annotation_utils/: README.md  misc.py
camera_control/: README.md  requirements.txt
camera_control/scripts/: find_animals.py  gstreamer_pipeline  video_stats
datasets/: README.md
deep_quoridor/: B5W3_resnet_sample.onnx  MODEL_SAVE_OPTIONS.md  agents.md  ci_requirements.txt  requirements.txt
deep_quoridor/coding-agents/: feature-alphazero-plan.md  feature-trainv2-rust-ingtegraion-plan.md  manual-update-validate-commit-pr-plan.md  onnx_save_optimization_plan.md  onnx_save_optimization_results.md  parallel-games-and-cache-plan.md  parallel-games-and-cache-results.md  pr-rust-selfplay-integration.md  pr346-review-results.md  real-model-selfplay-parity-plan.md  remove-visit-probs-duplication-plan.md  results-real-model-selfplay-parity.md  results-step-trace-consistency-test.md  use-production-policy-vector-plan.md  use-production-policy-vector-results.md
deep_quoridor/experiments/: ci-resnet.yaml  ci.yaml  example.yaml  test_model_save_timing.yaml  test_onnx_export.yaml
deep_quoridor/plans/: train_policy_db_evaluator.md
deep_quoridor/rust/: Cargo.toml  MIGRATION_PLAN.md  README.md  RUST_FOR_PYTHONISTAS.md  backlog.md  pr346-review-plan.md  pyproject.toml
deep_quoridor/rust/fixtures/: alphazero_B5W2_mv1.onnx  alphazero_B5W2_mv1.pt
deep_quoridor/rust/src/: actions.rs  game_runner.rs  game_state.rs  grid.rs  grid_helpers.rs  lib.rs  minimax.rs  onnx_inference.rs  packed_state.rs  pathfinding.rs  python_consistency.rs  q_bit_repr.rs  q_bit_repr_conversions.rs  q_game_mechanics.rs  q_minimax.rs  quoridor_lib.rs  replay_writer.rs  rotation.rs  selfplay_config.rs  validation.rs
deep_quoridor/rust/src/agents/: mod.rs  onnx_agent.rs  random_agent.rs
deep_quoridor/rust/src/agents/alphazero/: agent.rs  evaluator.rs  mcts.rs  mod.rs
deep_quoridor/rust/src/compact/: mod.rs  policy_db.rs  q_bit_repr.rs  q_bit_repr_conversions.rs  q_game_mechanics.rs  q_minimax.rs
deep_quoridor/rust/tests/: python_consistency.rs
deep_quoridor/src/: action_reference.py  agent_evolution_tournament.py  ai_report_cli.py  arena.py  arena_utils.py  arena_yaml_recorder.py  brute_force.py  cliff_tournament.py  create_policy_db.py  env_wrappers.py  games_saver.py  interactive_evaluator_visualizer.py  main.py  mcts_game_reference.py  metrics.py  mpl_visualizer.py  osaz.requirements.md  play.py  profile_alphazero.py  profile_evaluator.py  qgrid.py  qgrid_cuda.py  quoridor.py  quoridor_cuda.py  quoridor_env.py  quoridor_rs.pyi  random_agents.py  renderers.py  replay_buffer_visualizer.py  replay_tool.py  run_metrics.py  selfplay_real_model_reference.py  simple_agent.py  step_trace_reference.py  (+9 more)
deep_water_level/: requirements.txt
doc/: cloud_machine.md  mlflow.md
experiments/: 2024_12_09_jon_larger_model.py  2024_12_17_julian_amped_augmentation.py  2025_01_10_julian_pretrained_resnet_places365.py  2025_01_18_jon_find_point_in_image.py  2025_01_19_cucu_pretrained_deeplabv3.py  2025_03_08_jon_petting_zoo_rl_tutorial.py
mlflow/: Dockerfile  export.sh  keepalive.sh  update_password.py
object_tracker_0/: README.md  requirements.txt
pytorch_exercises/: 0_tensors.py  requirements.txt
scripts/: RUST_CI_TESTING.md  local_setup  mlflow_query_projects  mlflow_update_password  remote_setup  test_rust_ci.sh
(+210 files in other folders)
