[profile.dev]
# Makes it easier to catch test failures in a debugger
panic = "abort"

[package]
name = "quoridor-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "quoridor_rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "create_policy_db"
path = "src/bin/create_policy_db.rs"
required-features = ["binary"]

[[bin]]
name = "selfplay"
path = "src/bin/selfplay.rs"
required-features = ["binary"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"], optional = true }
numpy = { version = "0.22", optional = true }
ndarray = "0.16"
rand = "0.8"
rayon = "1.10"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
clap = { version = "4.5", features = ["derive"], optional = true }
ort = { version = "2.0.0-rc.11", optional = true }
anyhow = "1"
serde_yaml = { version = "0.9", optional = true }
ndarray-npy = { version = "0.9", optional = true }
zip = { version = "2", optional = true, default-features = false, features = ["deflate"] }

[features]
default = ["python"]
python = ["pyo3", "numpy"]
binary = ["clap", "ort", "serde_yaml", "ndarray-npy", "zip"]

[dev-dependencies]
tempfile = "3"

[profile.release]
# Enable optimizations for better performance
opt-level = 3
lto = true
codegen-units = 1
