[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "quoridor-rs"
version = "0.1.0"
description = "Rust implementation of Quoridor game logic with Python bindings"
requires-python = ">=3.8"
dependencies = ["numpy>=1.20"]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "quoridor_rs"
